Update Q&A with password reset instructions

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -2,10 +2,5 @@
 title: "Q&A"
 ---
 
-## How do I install Mintlify?
-
-Run:
-
-```bash
-npm install -g mintlify
-```
+## How do I reset my account password?
+To reset your password, click on the "Forgot Password" link on the login page. You will receive an email with instructions within 5 minutes.
