Update Q&A with common support questions

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -1,6 +1,25 @@
 ---
-title: "Q&A"
+title: "Common Support Q&A"
+category: "Account & Technical Support"
+tags: ["wallets", "verification", "withdrawals", "errors"]
 ---
 
-## How do I reset my account password?
-To reset your password, click on the "Forgot Password" link on the login page. You will receive an email with instructions within 5 minutes.
+## Did I register my SunflowerLand account using MetaMask or Coinbase Wallet?
+Your wallet address isn’t locked to MetaMask, Coinbase, Ronin, or any other wallet app. Think of it like a house key—you can put the same key on different keychains, but it will always open the same door. 
+
+In crypto, that ‘key’ is your **recovery phrase**. No matter which wallet app you use, if you enter the same recovery phrase, you’ll unlock the same wallet address. We cannot confirm which app you used because the wallet address comes from the blockchain, not the app brand. The app is just the tool you used to access it.
+
+---
+
+## How to fix "share network error" on withdrawal?
+To resolve a share network error, you must wait for **14 days** from the time you first received the error message. Once the 14-day cooling period is over, you can retry your withdrawal.
+
+---
+
+## My face verification is linked to an old farm ID. How do I move it to my new account?
+If you have been playing on your new account for at least **30 days**, you can request that the support team clear the face verification from your old account. Once the team resets the link, you will be able to perform the face verification process on your new farm ID.
+
+---
+
+## Do I need to change my network/IP before waiting two weeks for a withdrawal?
+No, you do not necessarily need to change your IP address or network settings. The most important factor is the timing: you must wait the full **two-week interval** before attempting another withdrawal.
