Update Q&A on wallet registration

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -4,22 +4,173 @@ category: "Account & Technical Support"
 tags: ["wallets", "verification", "withdrawals", "errors"]
 ---
 
-## Did I register my SunflowerLand account using MetaMask or Coinbase Wallet?
-Your wallet address isn’t locked to MetaMask, Coinbase, Ronin, or any other wallet app. Think of it like a house key—you can put the same key on different keychains, but it will always open the same door. 
+## Did I register my SunflowerLand account using MetaMask or Ronin?
+Your wallet address isn’t tied to MetaMask, Ronin, or any other wallet app. Think of it like a house key—you can put the same key on different keychains, but it will always open the same door. In crypto, that ‘key’ is your recovery phrase.  
 
-In crypto, that ‘key’ is your **recovery phrase**. No matter which wallet app you use, if you enter the same recovery phrase, you’ll unlock the same wallet address. We cannot confirm which app you used because the wallet address comes from the blockchain, not the app brand. The app is just the tool you used to access it.
+We cannot confirm which app you used because wallet addresses come directly from the blockchain, not from the app brand. The app is only the tool you used to access your wallet, so the blockchain does not record whether you used MetaMask, Ronin, or another wallet.
 
 ---
 
-## How to fix "share network error" on withdrawal?
-To resolve a share network error, you must wait for **14 days** from the time you first received the error message. Once the 14-day cooling period is over, you can retry your withdrawal.
+## How to fix "shared network error" on withdrawal?
+If you see a share network error, you need to wait **14 days** from when the error first appeared.  
+This waiting time is required by the system’s security process, so retrying earlier will not work.
 
 ---
 
 ## My face verification is linked to an old farm ID. How do I move it to my new account?
-If you have been playing on your new account for at least **30 days**, you can request that the support team clear the face verification from your old account. Once the team resets the link, you will be able to perform the face verification process on your new farm ID.
+If you’ve been playing on your new account for at least 30 days, you can ask the support team to remove the face verification from your old farm. Once they reset it, you’ll be able to complete face verification on your new account.  
+This step is necessary because face verification is tied to the farm ID you first used.
 
 ---
 
 ## Do I need to change my network/IP before waiting two weeks for a withdrawal?
-No, you do not necessarily need to change your IP address or network settings. The most important factor is the timing: you must wait the full **two-week interval** before attempting another withdrawal.
+No, you don’t need to change your IP address or network settings. The important step is to wait the full **two‑week period** before trying another withdrawal.  
+This waiting time is part of the system’s security checks, so changing your network won’t speed it up.
+
+---
+
+## Can my relative use my old phone to play SunflowerLand?
+Yes, your relative can use your old phone to create and play on their own account. Once they start using the device, make sure only their account is logged in and you don’t log in again.  
+This rule exists to prevent multiple accounts from being linked to the same device, which could trigger bans for suspicious activity.
+
+---
+
+## What does ‘1 person = 1 account’ mean?
+It means each person is allowed only one account in SunflowerLand. Playing with multiple accounts is not permitted and can lead to a ban.  
+This rule exists to keep the game fair and prevent abuse from players using multiple accounts.
+
+---
+
+## I claimed the ‘More Picks’ skill, but my tool stock hasn’t changed. Is this a bug?
+No, this isn’t a bug. The ‘More Picks’ skill affects gem restocks, not the daily free restocks.  
+This distinction exists because the skill is designed to improve gem‑based restocking options, not the free daily ones.
+
+---
+
+## I no longer have access to my wallet address. How can I recover my SunflowerLand account?
+If you’ve lost access to your wallet’s seed phrase, you won’t be able to recover your SunflowerLand account. Accounts are permanently tied to the wallet you used at registration, and only the seed phrase can unlock it.  
+This rule exists because blockchain wallets are self‑custodied — no provider or game team can restore access without the original recovery phrase.
+
+---
+
+## I don’t have ETH and can’t complete my withdrawal. Can you remove the pending transaction?
+No, pending withdrawal transactions cannot be removed from your game account. You must complete the withdrawal on your end using ETH to cover the transaction.  
+This rule exists because blockchain transactions are immutable once created — they can’t be canceled or deleted by the game team.
+
+---
+
+## Can you unbind or unlink a Discord account from my SunflowerLand account?
+No, we cannot unbind or unlink any social media accounts (including Discord) that are linked to your SunflowerLand account.  
+This policy exists because the removal feature was paused after players abused it to create multiple accounts, which violates the one‑account‑per‑person rule.
+
+---
+
+## My SunflowerLand account got banned. Can you tell me why?
+We understand it’s frustrating to have your account banned, but bans are never issued without a clear reason. Due to security, we cannot share the exact details of our investigation process. If you believe the ban was a mistake, you can request a review by providing evidence when asked.  
+This policy exists to protect the integrity of the game and prevent players from exploiting knowledge of our investigation methods.
+
+---
+
+## I don’t have ETH and don’t know how to get it. How can I withdraw my flowers?
+To withdraw, you’ll need ETH to cover the transaction fees. You can purchase ETH through exchanges like Binance or Coinbase, or directly from the wallet provider you’re using. Make sure to buy and transfer ETH on the **Base Network** so it works correctly with SunflowerLand withdrawals.  
+This requirement exists because blockchain withdrawals need ETH for gas fees, and only ETH on the Base Network is accepted.
+
+---
+
+## Can I sell items to my friends for cheaper than the marketplace price?
+No, selling items to friends for cheaper than the marketplace price is considered a bannable offense. Players have previously been banned for engaging in this behavior, as it is treated as multi‑accounting and funneling activity.  
+This rule exists to keep the economy fair and prevent players from bypassing the marketplace system, which could give some accounts an unfair advantage.
+
+---
+
+## What is funneling activity?
+Funneling activity happens when one account gives items, resources, or advantages to another account in a way that bypasses the marketplace or game rules.  
+This is considered multi‑accounting and can lead to a ban because it creates unfair advantages and disrupts the game’s economy.
+
+---
+
+## How can I withdraw $FLOWER?
+You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
+This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
+
+For related concerns, see:  
+- **Do I need ETH to withdraw?** (explains gas fees)  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
+- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
+
+---
+
+## How can I withdraw $FLOWER?
+You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
+This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
+
+For related concerns, see:  
+- **Do I need ETH to withdraw?** (explains gas fees)  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
+- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
+
+---
+
+## How can I withdraw $FLOWER?
+You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
+This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
+
+For related concerns, see:  
+- **Do I need ETH to withdraw?** (explains gas fees)  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
+- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
+
+---
+
+## When was the "shared network error" implemented?
+The shared network error was implemented on **January 12, 2026**.  
+This security measure was added to prevent abuse of withdrawals and ensure fair play. If you encounter this error, you’ll need to wait the required **14‑day period** before trying again.
+
+For related concerns, see:  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
+- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)  
+- **How can I withdraw $FLOWER?** (step‑by‑step process)
+
+---
+
+## Why do I get a "shared network error" if my network isn’t shared?
+Even if your network isn’t shared, most Internet service providers use **dynamic IP addresses**. This means your IP address can change over time and may be temporarily assigned to another user.  
+If another player using the same IP has already made a withdrawal, the system will detect it as a shared network and apply the **14‑day waiting period**.  
+This rule exists to prevent multiple withdrawals from the same IP in a short time, ensuring fairness and security.
+
+For related concerns, see:  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
+- **When was the "shared network error" implemented?** (date of implementation)  
+- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
+
+---
+
+## I accidentally sent ETH (or another token) to my deposit address. Can it be returned?
+No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes and processes **$FLOWER**.  
+If you send ETH or any other token to this address, the system cannot recover or refund it because the contract is not designed to handle anything except $FLOWER.  
+This rule exists to protect the integrity of the game economy and ensure deposits are processed securely.
+
+For related concerns, see:  
+- **How can I withdraw $FLOWER?** (step‑by‑step process)  
+- **Do I need ETH to withdraw?** (explains gas fees)  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)
+
+---
+
+## Deposits FAQ
+
+### What tokens can I deposit?
+Only **$FLOWER** is recognized by the deposit address. Any other tokens sent will not be processed.
+
+### I accidentally sent ETH (or another token) to my deposit address. Can it be returned?
+No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes $FLOWER.  
+Sending ETH or other tokens will result in permanent loss, as the contract cannot recover or refund them.
+
+### Why is only $FLOWER accepted?
+The deposit contract is designed specifically for $FLOWER to ensure secure and consistent transactions within SunflowerLand.  
+
+---
+For related concerns, see:  
+- **How can I withdraw $FLOWER?** (step‑by‑step process)  
+- **Do I need ETH to withdraw?** (explains gas fees)  
+- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)
