Update Q&A tags and add FAQ index

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -1,176 +1,217 @@
 ---
 title: "Common Support Q&A"
 category: "Account & Technical Support"
-tags: ["wallets", "verification", "withdrawals", "errors"]
+tags: ["wallets", "withdrawals", "deposits", "tokens", "network", "errors"]
 ---
 
-## Did I register my SunflowerLand account using MetaMask or Ronin?
-Your wallet address isn’t tied to MetaMask, Ronin, or any other wallet app. Think of it like a house key—you can put the same key on different keychains, but it will always open the same door. In crypto, that ‘key’ is your recovery phrase.  
+# 📖 SunflowerLand FAQ Index
 
-We cannot confirm which app you used because wallet addresses come directly from the blockchain, not from the app brand. The app is only the tool you used to access your wallet, so the blockchain does not record whether you used MetaMask, Ronin, or another wallet.
+Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navigation:
+
+- 🛠️ [Ongoing Issues FAQ](#-ongoing-issues-faq)  
+  Covers temporary issues currently under investigation. Entries will be removed once resolved.  
+
+- 🌱 [Withdrawals FAQ](#-withdrawals-faq)  
+  Covers how to withdraw $FLOWER, ETH requirements, shared network errors, and IP concerns.
+
+- 💰 [Deposits FAQ](#-deposits-faq)  
+  Covers what tokens can be deposited, wrong token deposits, and why only $FLOWER is accepted.
+
+- ⚠️ [Game Errors FAQ](#-game-errors-faq)  
+  Covers general gameplay/system errors, including shared network error details.
+
+- 🔑 [Account Verification FAQ](#-account-verification-faq)  
+  Covers Discord and Telegram verification steps, and troubleshooting if you’re using the wrong linked account.
+
+- 🛡️ [Bans & Re‑Verification FAQ](#-bans--re-verification-faq)  
+  Covers rules about bans, re‑verification, and requirements for new accounts.
+
+- 🕰️ [Discontinued & Not Recommended FAQ](#-discontinued--not-recommended-faq)  
+  Covers expired items/features and practices that are discouraged due to risks or lack of support. 
+
+- 🌐 [Network Transactions FAQ](#-network-transactions-faq)  
+  Covers issues with blockchain transactions, including gas fees, pending/stuck transfers, and network congestion.
+
+## 🛠️ Ongoing Issues FAQ
+
+  
+## 🌱 Withdrawals FAQ
+
+### How can I withdraw $FLOWER?
+You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
+This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
 
 ---
 
-## How to fix "shared network error" on withdrawal?
-If you see a share network error, you need to wait **14 days** from when the error first appeared.  
+### Do I need ETH to withdraw?
+Yes, you need ETH to cover the gas fees when withdrawing $FLOWER. You can purchase ETH through exchanges like Binance or Coinbase, or directly from the wallet provider you’re using.  
+Make sure to buy and transfer ETH on the **Base Network**, since only ETH on Base is accepted for withdrawals.  
+This requirement exists because blockchain transactions need ETH to process securely, and the Base Network ensures compatibility with SunflowerLand.
+
+---
+
+### How to fix "shared network error" on withdrawal?
+If you see a shared network error, you need to wait **14 days** from when the error first appeared.  
 This waiting time is required by the system’s security process, so retrying earlier will not work.
 
 ---
 
-## My face verification is linked to an old farm ID. How do I move it to my new account?
-If you’ve been playing on your new account for at least 30 days, you can ask the support team to remove the face verification from your old farm. Once they reset it, you’ll be able to complete face verification on your new account.  
-This step is necessary because face verification is tied to the farm ID you first used.
-
----
-
-## Do I need to change my network/IP before waiting two weeks for a withdrawal?
-No, you don’t need to change your IP address or network settings. The important step is to wait the full **two‑week period** before trying another withdrawal.  
-This waiting time is part of the system’s security checks, so changing your network won’t speed it up.
-
----
-
-## Can my relative use my old phone to play SunflowerLand?
-Yes, your relative can use your old phone to create and play on their own account. Once they start using the device, make sure only their account is logged in and you don’t log in again.  
-This rule exists to prevent multiple accounts from being linked to the same device, which could trigger bans for suspicious activity.
-
----
-
-## What does ‘1 person = 1 account’ mean?
-It means each person is allowed only one account in SunflowerLand. Playing with multiple accounts is not permitted and can lead to a ban.  
-This rule exists to keep the game fair and prevent abuse from players using multiple accounts.
-
----
-
-## I claimed the ‘More Picks’ skill, but my tool stock hasn’t changed. Is this a bug?
-No, this isn’t a bug. The ‘More Picks’ skill affects gem restocks, not the daily free restocks.  
-This distinction exists because the skill is designed to improve gem‑based restocking options, not the free daily ones.
-
----
-
-## I no longer have access to my wallet address. How can I recover my SunflowerLand account?
-If you’ve lost access to your wallet’s seed phrase, you won’t be able to recover your SunflowerLand account. Accounts are permanently tied to the wallet you used at registration, and only the seed phrase can unlock it.  
-This rule exists because blockchain wallets are self‑custodied — no provider or game team can restore access without the original recovery phrase.
-
----
-
-## I don’t have ETH and can’t complete my withdrawal. Can you remove the pending transaction?
-No, pending withdrawal transactions cannot be removed from your game account. You must complete the withdrawal on your end using ETH to cover the transaction.  
-This rule exists because blockchain transactions are immutable once created — they can’t be canceled or deleted by the game team.
-
----
-
-## Can you unbind or unlink a Discord account from my SunflowerLand account?
-No, we cannot unbind or unlink any social media accounts (including Discord) that are linked to your SunflowerLand account.  
-This policy exists because the removal feature was paused after players abused it to create multiple accounts, which violates the one‑account‑per‑person rule.
-
----
-
-## My SunflowerLand account got banned. Can you tell me why?
-We understand it’s frustrating to have your account banned, but bans are never issued without a clear reason. Due to security, we cannot share the exact details of our investigation process. If you believe the ban was a mistake, you can request a review by providing evidence when asked.  
-This policy exists to protect the integrity of the game and prevent players from exploiting knowledge of our investigation methods.
-
----
-
-## I don’t have ETH and don’t know how to get it. How can I withdraw my flowers?
-To withdraw, you’ll need ETH to cover the transaction fees. You can purchase ETH through exchanges like Binance or Coinbase, or directly from the wallet provider you’re using. Make sure to buy and transfer ETH on the **Base Network** so it works correctly with SunflowerLand withdrawals.  
-This requirement exists because blockchain withdrawals need ETH for gas fees, and only ETH on the Base Network is accepted.
-
----
-
-## Can I sell items to my friends for cheaper than the marketplace price?
-No, selling items to friends for cheaper than the marketplace price is considered a bannable offense. Players have previously been banned for engaging in this behavior, as it is treated as multi‑accounting and funneling activity.  
-This rule exists to keep the economy fair and prevent players from bypassing the marketplace system, which could give some accounts an unfair advantage.
-
----
-
-## What is funneling activity?
-Funneling activity happens when one account gives items, resources, or advantages to another account in a way that bypasses the marketplace or game rules.  
-This is considered multi‑accounting and can lead to a ban because it creates unfair advantages and disrupts the game’s economy.
-
----
-
-## How can I withdraw $FLOWER?
-You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
-This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
-
-For related concerns, see:  
-- **Do I need ETH to withdraw?** (explains gas fees)  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
-- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
-
----
-
-## How can I withdraw $FLOWER?
-You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
-This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
-
-For related concerns, see:  
-- **Do I need ETH to withdraw?** (explains gas fees)  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
-- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
-
----
-
-## How can I withdraw $FLOWER?
-You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
-This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
-
-For related concerns, see:  
-- **Do I need ETH to withdraw?** (explains gas fees)  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
-- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
-
----
-
-## When was the "shared network error" implemented?
+### When was the "shared network error" implemented?
 The shared network error was implemented on **January 12, 2026**.  
 This security measure was added to prevent abuse of withdrawals and ensure fair play. If you encounter this error, you’ll need to wait the required **14‑day period** before trying again.
 
-For related concerns, see:  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
-- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)  
-- **How can I withdraw $FLOWER?** (step‑by‑step process)
-
 ---
 
-## Why do I get a "shared network error" if my network isn’t shared?
+### Why do I get a "shared network error" if my network isn’t shared?
 Even if your network isn’t shared, most Internet service providers use **dynamic IP addresses**. This means your IP address can change over time and may be temporarily assigned to another user.  
 If another player using the same IP has already made a withdrawal, the system will detect it as a shared network and apply the **14‑day waiting period**.  
 This rule exists to prevent multiple withdrawals from the same IP in a short time, ensuring fairness and security.
 
-For related concerns, see:  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)  
-- **When was the "shared network error" implemented?** (date of implementation)  
-- **Do I need to change my network/IP before waiting two weeks for a withdrawal?** (explains why changing IP won’t help)
-
 ---
 
-## I accidentally sent ETH (or another token) to my deposit address. Can it be returned?
-No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes and processes **$FLOWER**.  
-If you send ETH or any other token to this address, the system cannot recover or refund it because the contract is not designed to handle anything except $FLOWER.  
-This rule exists to protect the integrity of the game economy and ensure deposits are processed securely.
+### Do I need to change my network/IP before waiting two weeks for a withdrawal?
+No, you don’t need to change your IP address or network settings. The important step is to wait the full **two‑week period** before trying another withdrawal.  
+This waiting time is part of the system’s security checks, so changing your network won’t speed it up.
 
-For related concerns, see:  
-- **How can I withdraw $FLOWER?** (step‑by‑step process)  
-- **Do I need ETH to withdraw?** (explains gas fees)  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)
+**What to do:**  
+- Try increasing the gas limit and/or gas price.  
+- Check if you have pending transactions and clear them.  
+- Ensure you’re connected to a reliable RPC endpoint.  
+- If the issue persists, wait until network congestion eases and retry.
 
----
-
-## Deposits FAQ
+## 💰 Deposits FAQ
 
 ### What tokens can I deposit?
 Only **$FLOWER** is recognized by the deposit address. Any other tokens sent will not be processed.
 
+---
+
 ### I accidentally sent ETH (or another token) to my deposit address. Can it be returned?
 No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes $FLOWER.  
-Sending ETH or other tokens will result in permanent loss, as the contract cannot recover or refund them.
+If you send ETH or any other token to this address, the system cannot recover or refund it because the contract is not designed to handle anything except $FLOWER.  
+This rule exists to protect the integrity of the game economy and ensure deposits are processed securely.
+
+---
 
 ### Why is only $FLOWER accepted?
 The deposit contract is designed specifically for $FLOWER to ensure secure and consistent transactions within SunflowerLand.  
+Allowing other tokens would risk errors and compromise the game economy.
+
+## ⚠️ Game Errors FAQ
+
+### Why do I get a "shared network error" if my network isn’t shared?
+Even if your network isn’t shared, most Internet service providers use **dynamic IP addresses**. This means your IP address can change over time and may be temporarily assigned to another user.  
+If another player using the same IP has already made a withdrawal, the system will detect it as a shared network and apply the **14‑day waiting period**.  
+This rule exists to prevent multiple withdrawals from the same IP in a short time, ensuring fairness and security.
 
 ---
-For related concerns, see:  
-- **How can I withdraw $FLOWER?** (step‑by‑step process)  
-- **Do I need ETH to withdraw?** (explains gas fees)  
-- **How to fix "shared network error" on withdrawal?** (explains the 14‑day wait)
+
+### When was the "shared network error" implemented?
+The shared network error was implemented on **January 12, 2026**.  
+This security measure was added to prevent abuse of withdrawals and ensure fair play. If you encounter this error, you’ll need to wait the required **14‑day period** before trying again.
+
+---
+
+### How to fix "shared network error" on withdrawal?
+If you see a shared network error, you need to wait **14 days** from when the error first appeared.  
+This waiting time is required by the system’s security process, so retrying earlier will not work.
+
+## 🔑 Account Verification FAQ
+
+### I cannot verify my Discord account
+**For Discord**  
+1. Go to [this channel](https://discord.com/channels/880987707214544966/925940397237219369) and agree to the terms and conditions of the game.  
+2. Go to [this channel](https://discord.com/channels/880987707214544966/1361122506655666367) and type `/verify`. Make sure to include the slash `/`.  
+3. Go back to your game and complete the face verification.
+
+**For Telegram**  
+1. Go to **PumpkinPete Bot**.  
+2. Type `/verify`. Make sure to include the slash `/`.  
+3. Go back to your game and complete the face verification.
+
+**Important:**  
+If you are having issues verifying, it usually means you are using the wrong Discord or Telegram account. Please ensure you are logged into the correct account that is linked to your game profile.
+
+## 🛡️ Bans & Re‑Verification FAQ
+
+### I accidentally created two accounts. My face verification is linked to the old account, but I want to use my new one. Can you reset the face verification for me?
+No, the face verification cannot be reset or transferred between accounts.  
+If you want to use your new account, you must actively play it for **30 days** before you can submit a request for re‑verification.  
+This rule ensures that new accounts are genuine and not created just to bypass restrictions.
+
+---
+
+### The in‑game marketplace requires face verification. How can I use the marketplace to boost my new account?
+Unfortunately, this is one of the **cons of creating a new account immediately after discarding the old one**.  
+You will not be able to access the marketplace until you have actively played your new account for **30 days** and then requested re‑verification.  
+This rule ensures fairness and prevents players from bypassing restrictions by quickly switching accounts.
+
+---
+
+### If I create a new account and scan my face again, and I only use one device, will I get banned again?
+You will not be banned for doing that.  
+However, you must actively play the new farm for **30 days** before you can submit a request for re‑verification.  
+This rule ensures that new accounts are genuine and not created just to bypass restrictions.
+
+---
+
+### Can I use my friend’s device (mobile phone, computer, or laptop) so I can log in because the device I am using is broken?
+No. Logging into your farm from a friend’s device is considered **account sharing**.  
+This action violates the rules and will result in a **permanent ban** on your account.  
+The penalty cannot be lifted, as it would be unfair to other players who received the same punishment.
+
+---
+
+### I want to appeal my ban. What should I do?
+If you have submitted a support ticket, please **wait for a support team member to review your case**.  
+Ban appeals cannot be processed through the FAQ or by AI assistance — only the Sunflower Land support team can investigate and decide on appeals.  
+
+Please note:  
+- Appeals are handled on a case‑by‑case basis.  
+- There is no guarantee that a ban will be overturned.  
+- Permanent bans for rule violations (such as account sharing) are generally not reversible.
+
+
+## 🕰️ Discontinued & Not Recommended FAQ
+
+### I bought the Ronin Land pass but haven't received it in the game. Why is that?
+You will not be able to use it anymore, as the **Bronze and Silver land passes have already expired**.  
+We do not have control over this — the passes are being resold by players themselves.  
+These land passes were never intended to be sold, since they were originally distributed as part of an **airdrop conducted a few months ago**.
+
+---
+
+### I bought a Sunflower Land account on OpenSea but it has missing items. Why is that?
+We do not recommend purchasing lands because the metadata is not always accurate.  
+When you review the land details, you will see a clear warning:  
+
+*"We do not recommend trading this NFT. Accounts may be banned and/or items may not match the account’s value. There is no guarantee that wearables, bumpkins, experience, progress, skills, or collectibles will remain after trade."*  
+
+Because these accounts are being resold by players, there is no guarantee that the items or progress shown will match what you actually receive. This is why we strongly advise against buying accounts through OpenSea or other marketplaces.
+
+## 🌐 Network Transactions FAQ
+
+### I have enough gas fee but I cannot proceed with the transaction. Why is that?
+Even if you have enough ETH to cover gas fees, transactions can still fail or get stuck for several reasons:
+
+- **Network congestion**: When many people are using base, transactions may remain pending or fail if the gas price is too low compared to current demand.  
+- **Gas limit too low**: If the gas limit is set below what the transaction requires, it can run out of gas before completion and fail.  
+- **Nonce conflicts**: Ethereum uses a “nonce” (sequence number) for each transaction. If you have pending or stuck transactions, new ones may not process until the earlier ones are cleared.  
+- **Smart contract errors**: If you’re interacting with a contract (e.g., marketplace, farming logic), the contract itself may reject the transaction even if gas is sufficient.  
+- **Wallet/network issues**: Wallets (like MetaMask) or RPC endpoints sometimes experience delays or errors, causing transactions to fail despite sufficient gas.   
+
+---
+
+### Why does my transaction stay pending even though I have enough gas?
+Pending transactions often happen due to **network congestion**. If many users are submitting transactions at the same time, your transaction may wait in the mempool until miners/validators pick it up.  
+- If your gas price is lower than the current market rate, it may remain pending for a long time.  
+- You can speed it up by increasing the gas price or using the “speed up” option in your wallet.
+
+---
+
+### What should I do if my transaction is stuck?
+1. Check if you have **pending transactions** in your wallet.  
+2. Use the **“cancel” or “speed up”** option in your wallet to clear or replace the stuck transaction.  
+3. Increase the **gas price** to match current network demand.  
+4. Switch to a more reliable **RPC endpoint** if your current one is slow or overloaded.  
+5. Wait until **network congestion eases** and retry.
