Update Q&A tags with transactions and ongoing-issues

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Common Support Q&A"
 category: "Account & Technical Support"
-tags: ["wallets", "withdrawals", "deposits", "tokens", "network", "errors"]
+tags: ["wallets", "withdrawals", "deposits", "tokens", "network", "errors", "transactions", "ongoing-issues"]
 ---
 
 # 📖 SunflowerLand FAQ Index
